# governance-os

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  governance.yaml  pyproject.toml
.codex/: config.toml  rules.toml
.github/workflows/: ci.yml  release.yml
docs/: extension-architecture.md  governance-contract.md  release-checklist.md  release-operations.md  run-claude.sh  testing-strategy.md
docs/contracts/: claude-failure-codes.md  claude-output-contract.md  claude-task-schema.md
hooks/: enforce-claude-output-contract.py
scripts/claude/: run-governed-task.py  validate-claude-output.py
skills/check-portable-path-compliance/: SKILL.md
skills/compare-expected-vs-observed-artifacts/: SKILL.md
skills/produce-fail-closed-verdict/: SKILL.md
skills/verify-frontmatter-schema/: SKILL.md
skills/write-governed-markdown-lane/: SKILL.md
src/governance_os/: __init__.py  api.py  cli.py  config.py  discovery.py  scaffold.py  version.py
src/governance_os/audit/: __init__.py  core.py
src/governance_os/authority/: __init__.py  core.py
src/governance_os/config/: __init__.py  defaults.py  loader.py  models.py
src/governance_os/contracts/: __init__.py  execution_trace.py  failure_codes.py  tool_policy.py
src/governance_os/discovery/: __init__.py  candidates.py  pipelines.py  repo.py
src/governance_os/graph/: __init__.py  analysis.py  builder.py
src/governance_os/intelligence/: __init__.py  comparison.py  insights.py  priority.py  scoring.py
src/governance_os/lifecycle/: __init__.py  core.py
src/governance_os/mcp/: __init__.py  server.py
src/governance_os/mcp/tools/: __init__.py  finalize_result.py  get_file_context.py  get_task_contract.py  git_status.py  read_repo_map.py  record_evidence.py  run_lint.py  run_tests.py  search_code.py  write_patch.py
src/governance_os/models/: __init__.py  issue.py  lifecycle.py  pipeline.py  result.py  score.py  status.py
src/governance_os/parsing/: __init__.py  filenames.py  markdown_contract.py
src/governance_os/plugins/: __init__.py  authority_plugin.py  base.py  codex_instructions.py  doctrine_plugin.py  multi_agent_plugin.py  registry.py  skills_plugin.py
src/governance_os/preflight/: __init__.py  core.py
src/governance_os/profiles/: __init__.py  definitions.py  registry.py
src/governance_os/registry/: __init__.py  core.py
src/governance_os/reporting/: __init__.py  console.py  json_report.py  markdown.py
src/governance_os/runtime/: __init__.py  validator.py
src/governance_os/scaffolding/: __init__.py  init.py
src/governance_os/skills/: __init__.py  core.py
src/governance_os/templates/: README.governance.governed.md  README.governance.md  codex-session.md  doctrine-template.md  governance-governed.yaml  governance.yaml
src/governance_os/validation/: __init__.py  integrity.py  portability.py  schema.py  status_logic.py
tests/: test_audit.py  test_authority.py  test_candidates.py  test_cli.py  test_comparison.py  test_config.py  test_contracts.py  test_discovery.py  test_extension_architecture.py  test_filenames.py  test_governance_contract.py  test_graph.py  test_init_profiles.py  test_init_templates.py  test_insights.py  test_integration.py  test_json_reporting.py  test_lifecycle.py  test_markdown_contract.py  test_markdown_reporting.py  test_mcp_tools.py  test_multi_agent.py  test_plugins.py  test_portability.py  test_preflight.py  test_prioritization.py  test_product_promises.py  test_profiles.py  test_registry.py  test_scaffold.py  test_scaffold_plan.py  test_scoring.py  test_status.py  test_validation.py  test_validator.py
