[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "governance-os"
version = "0.1.0"
description = "A production-ready governance runtime for pipeline contract management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "markdown-it-py>=3.0.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
govos = "governance_os.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/governance_os"]

[tool.pytest.ini_options]
testpaths = ["tests"]
